# kraken-rs

./: Cargo.toml
futures/: Cargo.toml
futures/src/rest/: client.rs
futures/src/rest/models/: accounts.rs  cancel_all_orders.rs  cancel_order.rs  mod.rs  open_positions.rs  orderbook.rs  send_order.rs  tickers.rs
futures/src/ws/: client.rs
futures/tests/: private.rs  public.rs
spot/: Cargo.toml
spot/src/rest/: client.rs
