[package]
name = "kraken-futures"
version = "0.1.0"
authors = ["Weiyüen Wu <doomsplayer@gmail.com>"]
edition = "2021"
description = "Rust client for Kraken. Please look at tests/examples for detail usage at current stage."
license = "MIT"
documentation = "https://docs.rs/kraken"
repository = "https://github.com/dovahcrow/kraken-rs"
readme = "README.md"
categories = ["api-bindings"]

[badges]
travis-ci = { repository = "dovahcrow/kraken-rs", branch = "master" }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
failure = "0.1"
fehler = "1"
futures = { version = "0.3", features = ["async-await"] }
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }
ring = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
shrinkwraprs = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21" }
tungstenite = "0.21"
url = "2"
uuid = { version = "1.7", features = ["serde"] }

[dev-dependencies]
structopt = "0.3"
env_logger = "0.11"
dotenv = "0.15"
