[package]
name = "kraken-spot"
version = "0.1.0"
authors = ["Weiyüen Wu <doomsplayer@gmail.com>"]
edition = "2021"
description = "Rust client for Kraken. Please look at tests/examples for detail usage at current stage."
license = "MIT"
documentation = "https://docs.rs/kraken"
repository = "https://github.com/dovahcrow/kraken-rs"
readme = "README.md"
categories = ["api-bindings"]

[badges]
travis-ci = { repository = "dovahcrow/kraken-rs", branch = "master" }

[dependencies]
base64 = "0.22"
chrono = "0.4"
derive_builder = "0.9"
failure = "0.1"
fehler = "1"
futures = { version = "0.3", features = ["async-await"] }
hex = "0.4"
lazy_static = "1"
log = "0.4"
pin-project = "0.4"
regex = "1"
reqwest = { version = "0.11", features = ["json"] }
ring = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
shrinkwraprs = "0.3"
structopt = "0.3"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21" }
tungstenite = "0.21"
url = "2"

[dev-dependencies]
env_logger = "0.11"
dotenv = "0.15"
